[package]
name = "dbus-serialize"
license = "LGPL-2.1"
description = "Encoder / Decoder for D-Bus Types"
documentation = "http://srwalter.github.io/dbus-serialize/doc/dbus_serialize/types/index.html"
repository = "https://github.com/srwalter/dbus-serialize.git"
version = "0.1.1"
authors = ["Steven Walter <stevenrwalter@gmail.com>"]

[dependencies]
rustc-serialize = "0.3"
